--- a/Frontend/src/app/auth/auth.component.html
+++ b/Frontend/src/app/auth/auth.component.html
@@ -1,78 +1,3 @@
-<!-- <div class="example-container">
-  <form class="loginForm" *ngIf="isLoginMode" [formGroup]="loginForm" (ngSubmit)="login()">
-    <p> Login </p>
-    <mat-form-field>
-      <mat-label for="id">ID:</mat-label>
-      <input matInput id="id" formControlName="id" required>
-    </mat-form-field>
-    <mat-form-field>
-      <mat-label for="password">Enter your password</mat-label>
-      <input matInput [type]="hide() ? 'password' : 'text'" id="password" formControlName="password" required />
-      <button mat-icon-button matSuffix (click)="clickEvent($event)" [attr.aria-label]="'Hide password'"
-        [attr.aria-pressed]="hide()">
-        <mat-icon>{{hide() ? 'visibility_off' : 'visibility'}}</mat-icon>
-      </button>
-    </mat-form-field>
-
-    <div class="buttonContainer">
-      <button mat-flat-button type="submit" [disabled]="!loginForm.valid">Login</button>
-      <button mat-flat-button type="button" (click)="toggleForm()">Register</button>
-    </div>
-
-    <div class="socialAuthContainer">
-      <button class="kakaoLoginButton" (click)="onKakaoGetCode()">
-      </button>
-      <button class="googleLoginButton" (click)="onGoogleGetCode()">
-      </button>
-    </div>
-  </form>
-
-  <form class="registerForm" *ngIf="!isLoginMode" [formGroup]="registerForm" (ngSubmit)="register()">
-    <p> Register </p>
-    <mat-form-field>
-      <mat-label for="id">ID</mat-label>
-      <input matInput id="id" formControlName="id" required>
-    </mat-form-field>
-
-    <mat-form-field>
-      <mat-label for="email">Email</mat-label>
-      <input id="email" formControlName="email" required matInput placeholder="pat@example.com"
-        [formGroup]="registerForm" (blur)="updateErrorMessage()" required />
-        <mat-hint>
-          "A verification email will be sent."</mat-hint>
-      @if (registerForm.invalid) {
-      <mat-error>{{errorMessage()}}</mat-error>
-      }
-    </mat-form-field>
-
-    <mat-form-field>
-      <mat-label for="username">Username</mat-label>
-      <input matInput id="username" formControlName="username" required>
-    </mat-form-field>
-
-    <mat-form-field>
-      <mat-label for="password">Password</mat-label>
-      <input matInput [type]="hide() ? 'password' : 'text'" id="password" formControlName="password" minlength="6"
-        required />
-      <button mat-icon-button matSuffix (click)="clickEvent($event)" [attr.aria-label]="'Hide password'"
-        [attr.aria-pressed]="hide()" >
-        <mat-icon>{{hide() ? 'visibility_off' : 'visibility'}}</mat-icon>
-      </button>
-    </mat-form-field>
-
-    <mat-form-field>
-      <mat-label for="passwordCheck">PasswordCheck</mat-label>
-      <input matInput id="passwordCheck" formControlName="passwordCheck" required>
-    </mat-form-field>
-
-    <div class="buttonContainer">
-      <button mat-flat-button type="submit" [disabled]="!registerForm.valid">Register</button>
-      <button mat-flat-button type="button" (click)="toggleForm()">Back to Login</button>
-    </div>
-  </form>
-</div> -->
-
-<!-- 기본 화면 로그인 폼 -->
 <div class="container">
   <form class="loginForm" *ngIf="isLoginMode" [formGroup]="loginForm" (ngSubmit)="login()">
     <h2>Login</h2>
@@ -98,8 +23,12 @@
     </div>
 
     <div class="social-auth-container">
-      <button type="button" class="kakao-login-button" (click)="onKakaoGetCode()"></button>
-      <button type="button" class="google-login-button" (click)="onGoogleGetCode()"></button>
+      <button type="button" class="kakao-login-button" (click)="onKakaoGetCode()">
+        <img src="kakaoLoginButton.png" alt="Kakao Login" style="width: 36px; height: auto; border-radius: 8px;">
+      </button>
+      <button type="button" class="google-login-button" (click)="onGoogleGetCode()">
+        <img src="googleLoginButton.png" alt="Google Login" style="width: 36px; height: auto; border-radius: 8px;">
+      </button>
     </div>
   </form>
 
