Add a mypage component with service

--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -8,6 +8,9 @@
       <button routerLink="/dm" routerLinkActive="active" ariaCurrentWhenActive="page">
         Dm
       </button>
+      <button routerLink="/mypage" routerLinkActive="active" ariaCurrentWhenActive="page">
+        My Page
+      </button>
       <button *ngIf="!isLoggedIn" routerLink="/auth" routerLinkActive="active" ariaCurrentWhenActive="page">
         Auth
       </button>
