--- a/Frontend/src/app/board/board.component.scss
+++ b/Frontend/src/app/board/board.component.scss
@@ -129,6 +129,7 @@
     border-radius: 12px;
     cursor: pointer;
     transition: all 0.2s ease;
+    white-space: nowrap;
 
     &.primary {
       background-color: var(--accent-color);
@@ -343,12 +344,21 @@
           transition: all 0.2s ease;
 
           i {
-            font-size: 1.1rem;
             color: var(--subtle-color);
           }
 
           &:hover {
             background-color: var(--hover-background);
+          }
+
+          &:last-child {
+            color: var(--error-color);
+            i {
+              color: var(--error-color);
+            }
+            &:hover {
+              background-color: rgba(255, 59, 48, 0.1);
+            }
           }
         }
       }
@@ -359,20 +369,18 @@
 
       .more-button {
         color: var(--subtle-color);
+        font-weight: 400;
         background: none;
         border: none;
-        padding: 0.5rem;
+        padding: 0.5rem 1rem;
         cursor: pointer;
-        border-radius: 50%;
         transition: all 0.2s ease;
+        border-radius: 8px;
+
 
         &:hover {
           background-color: var(--hover-background);
           color: var(--text-color);
-        }
-
-        i {
-          font-size: 1.25rem;
         }
       }
 
@@ -402,7 +410,6 @@
           transition: all 0.2s ease;
 
           i {
-            font-size: 1.1rem;
             color: var(--subtle-color);
           }
 
@@ -460,8 +467,8 @@
 
   .objektArray {
     border-top: 1px solid var(--separator-color);
-    padding-top: 1.5rem;
-    margin-top: 1.5rem;
+    // padding-top: 1.5rem;
+    // margin-top: 1.5rem;
 
     .array-section {
       margin-bottom: 2rem;
@@ -470,7 +477,7 @@
         font-size: 1.1rem;
         font-weight: 600;
         color: var(--text-color);
-        margin: 0 0 1rem 0;
+        // margin: 0 0 1rem 0;
       }
 
       .objekt-grid {
@@ -486,7 +493,7 @@
         background-color: var(--form-background);
         border-radius: 12px;
         display: inline-block;
-        margin: 0 1rem 1rem 0;
+        // margin: 0 1rem 1rem 0;
 
         &:hover {
           .custom-tooltip {
