--- a/Frontend/src/app/dm/dm.component.scss
+++ b/Frontend/src/app/dm/dm.component.scss
@@ -3,7 +3,7 @@
   grid-template-columns: 300px 1fr;
   gap: 0;
   max-width: 1200px;
-  margin: 2rem auto;
+  margin: 2rem 2rem;
   height: calc(100vh - 8rem);
   background-color: var(--card-background);
   border-radius: 20px;
