--- a/Frontend/src/app/mypage/mypage.component.html
+++ b/Frontend/src/app/mypage/mypage.component.html
@@ -15,14 +15,14 @@
                placeholder="Enter username">
       </div>
 
-      <div class="form-group">
+      <!-- <div class="form-group">
         <label for="email">Email</label>
         <input type="email" 
                id="email" 
                formControlName="email" 
                class="form-control"
                placeholder="Enter email">
-      </div>
+      </div> -->
 
       <div class="form-actions">
         <button type="submit" class="btn primary">
