--- a/Frontend/src/app/post/post.component.scss
+++ b/Frontend/src/app/post/post.component.scss
@@ -101,8 +101,8 @@
     margin-bottom: 2rem;
 
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 1.5rem;
+    grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+    gap: 1rem;
 
     .form-group {
       label {
@@ -239,18 +239,18 @@
 
         .objekt-grid {
           display: grid;
-          grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
-          gap: 1rem;
+          grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+          gap: 0.5rem;
         }
 
         .objekt-container {
           position: relative;
           width: auto;
           height: 150px;
-          background-color: var(--form-background);
+          // background-color: var(--form-background);
           border-radius: 12px;
           display: inline-block;
-          margin: 0 1rem 1rem 0;
+          // margin: 0 1rem 1rem 0;
 
           &:hover {
             .custom-tooltip {
@@ -311,14 +311,13 @@
           }
 
           .objekt-img {
-            width: 100%;
+            width: auto;
             height: 100%;
             object-fit: contain;
             border-radius: 12px;
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
             transition: transform 0.2s ease;
-            background-color: var(--form-background);
-            padding: 0.5rem;
+            // background-color: var(--form-background);
           }
         }
       }
